--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ flask-admin = "*"
 typing-extensions = "*"
 flask-bcrypt = "*"
 flask-jwt-extended = "*"
+pytz = "*"
 
 [requires]
 python_version = "3.10"
