[Adding the 3rd party API]

--- a/package.json
+++ b/package.json
@@ -73,9 +73,11 @@
 		]
 	},
 	"dependencies": {
+		"google-maps-react": "^2.0.6",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
+		"react-google-maps": "^9.4.5",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"sweetalert2": "^11.7.27"
